--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=demo
+spring.application.name=medicalmanagementsystem
+spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.username=root
+spring.datasource.password=gabi2003
+spring.jpa.hibernate.ddl-auto=update
