--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=MedicalManagementSystem
 spring.datasource.url=jdbc:mysql://localhost:3306/MedicalManagementSystem
 spring.datasource.username=root
 spring.datasource.password=tudor221906@@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
